# MilheiroApp

./: manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
MilheiroApp/: asgi.py  settings.py  urls.py  wsgi.py
deploy/static/css/: styles.css
milheiro/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
milheiro/migrations/: 0001_initial.py  0002_alter_plataforma_custo_ponto.py  0003_alter_plataforma_created_by.py  0004_alter_carteiradepontos_options.py  0005_alter_carteiradepontos_pessoa_delete_pessoa.py  0006_carteiradepontos_created_at_carteiradepontos_valor_and_more.py
milheiro/static/css/: styles.css
milheiro/templates/milheiro/: carteiradepontos_confirm_delete.html  carteiradepontos_form.html  header.html  home.html  plataforma_changelist.html  pontos_changelist.html  skeleton.html
